@@ -19,6 +19,7 @@ Engine fixes:
 * Fix memory leak from dropped loot
 * Fix memory leak when a power's animation property was redefined.
 * Display min/max damage and absorb stats on single lines in the Character menu
+* Show power base damage type in tooltips if no damage modifier is set
 
 Game updates:
 * Limited the number of "unique" items that can drop from a boss to 1 per kill.
